internal/assets/static/main.css
/* ... */
.color-negative     { color: var(--color-negative); }
.color-positive     { color: var(--color-positive); }
.color-primary      { color: var(--color-primary); }

.break-all          { word-break: break-all; }
.text-left          { text-align: left; }
.text-right         { text-align: right; }
.text-center        { text-align: center; }
.text-elevate       { margin-top: -0.2em; }
.text-compact       { word-spacing: -0.18em; }
.rtl                { direction: rtl; }
.shrink             { flex-shrink: 1; }
.shrink-0           { flex-shrink: 0; }
.min-width-0        { min-width: 0; }
.block              { display: block; }
.overflow-hidden    { overflow: hidden; }
.relative           { position: relative; }
.flex               { display: flex; }
.flex-wrap          { flex-wrap: wrap; }
.flex-nowrap        { flex-wrap: nowrap; }
.justify-between    { justify-content: space-between; }
.justify-stretch    { justify-content: stretch; }
.justify-center     { justify-content: center; }
.justify-end        { justify-content: end; }
.uppercase          { text-transform: uppercase; }
.grow               { flex-grow: 1; }
.flex-column        { flex-direction: column; }
.items-center       { align-items: center; }
.items-start        { align-items: start; }
.gap-5              { gap: 0.5rem; }
.gap-7              { gap: 0.7rem; }
.gap-10             { gap: 1rem; }
.gap-15             { gap: 1.5rem; }
.margin-top-3       { margin-top: 0.3rem; }
.margin-top-5       { margin-top: 0.5rem; }
.margin-top-7       { margin-top: 0.7rem; }
.margin-top-10      { margin-top: 1rem; }
.margin-top-15      { margin-top: 1.5rem; }
.margin-block-3     { margin-block: 0.3rem; }
.margin-block-5     { margin-block: 0.5rem; }
.margin-block-7     { margin-block: 0.7rem; }
.margin-block-10    { margin-block: 1rem; }
.margin-block-15    { margin-block: 1.5rem; }
.margin-bottom-3    { margin-bottom: 0.3rem; }
.margin-bottom-5    { margin-bottom: 0.5rem; }
.margin-bottom-7    { margin-bottom: 0.7rem; }
.margin-bottom-10   { margin-bottom: 1rem; }
.margin-bottom-15   { margin-bottom: 1.5rem; }
.margin-bottom-auto { margin-bottom: auto; }

